Removed the workaround stuff, in code and README.